# app_v3

./: .env  .env.example  .eslintrc.cjs  .gitignore  README.md  README_DB.md  README_OPER.md  README_PROXY.md  agents.md  caddy_ops.sh  compose.prod.yaml  compose.yaml  index.html  migrate_from_json.py  package-lock.json  package.json  playwright.config.ts  tsconfig.json
api/: Dockerfile  requirements.txt
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: background.py  config.py  db.py  deps.py  main.py  metrics.py  models.py  rate_limit.py  schemas.py  security.py  storage.py
backend/app/models/: __init__.py  assignments.py  audit.py  files.py  missions.py  users.py
backend/app/routers/: __init__.py  admin.py  admin_users.py  assignments.py  auth.py  files.py  missions.py  planning.py  utils.py
backend/app/schemas/: __init__.py  assignments.py  missions.py  users.py
backend/app/services/: __init__.py  notifications.py  publishing.py  storage_s3.py
backend/scripts/: demo_calls.ps1  migrate_from_json.py  seed_plus.py
backend/tests/: conftest.py  test_admin.py  test_assignments.py  test_auth.py  test_missions.py  test_notifications.py  test_rate_limit.py  test_utils.py
deploy/: Caddyfile  compose.yaml  prometheus.yml  promtail-config.yml
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json
ops/: Caddyfile
perf/: load.js  smoke.js
sql/: schema.sql  (+1 more)
(+168 files in other folders)
