[project]
name = "coulisses-backend"
version = "0.1.0"
description = "Backend for Coulisses Crew Ultra V2"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]",
    "gunicorn",
    "pydantic==2.*",
    "pydantic-settings",
    "sqlalchemy[asyncio]==2.*",
    "asyncpg",
    "alembic",
    "passlib[bcrypt]",
    "python-multipart",
    "httpx",
    "redis",
    "prometheus-client",
    "structlog",
    "fakeredis",
    "aiosqlite",
]
